# aether

./: .gitignore  Cargo.toml  Dockerfile  definition.md  env.example  golden-rules.md  instruccions.md  proposals.json  test-git2.json  test-request.json  todo-context.json  todo-context.md
.qwen/: settings.json
orchestrator/: Cargo.toml
orchestrator/src/: coding_agent.rs  commit.rs  docker_sandbox.rs  intent_analyst.rs  llm_client.rs  main.rs  telegram_bot.rs  todo_context.rs  workspace_manager.rs
sandbox/src/: main.rs
steps/: 01-add-goldenrule6.md  01-git2-rs.md  02-httpserver.md  04-build-todo-context.md  05-docker-sandbox.md  06-intent_analyst.md  07-connect-to-llm.md  08-self-correction-loop.md  09-multi-workspace-permissions.md  10-telegram-interface.md
