[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["trace"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
